--- a/consoleDesign/app/src/main/res/values/strings.xml
+++ b/consoleDesign/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="left">LEFT</string>
     <string name="right">RIGHT</string>
     <string name="up">UP</string>
+    <string name="bluetooth_connection">Bluetooth Connection</string>
 </resources>
