--- a/consoleDesign/app/src/main/res/values/strings.xml
+++ b/consoleDesign/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="vgn">vgn</string>
     <string name="forward" />
     <string name="record">record</string>
+    <string name="mapping">Mapping</string>
 </resources>
